--- a/ui/exchange-rates/src/app/pages/most-traded-exchanges/most-traded-exchanges.component.css
+++ b/ui/exchange-rates/src/app/pages/most-traded-exchanges/most-traded-exchanges.component.css
@@ -1,13 +1,13 @@
 .card {
   border: 4px solid var(--primary);
-  width: 75%;
-  margin: 11px auto;
+  width: 80%;
+  margin: 40px auto 20px auto;
 }
 
 form .form-header-row {
   display: flex;
-  justify-content: end;
-  margin: 5px 0px 15px 0px;
+  justify-content: center;
+  margin: 5px 10px 20px 10px;
 }
 
 form .buttons button {
@@ -19,7 +19,30 @@ tbody {
   text-align: center;
 }
 
+table th {
+  color: var(--primary);
+}
+
 .flag {
   margin: 0px 5px;
   vertical-align: top;
+}
+
+.exchange-rate {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.exchange-rate button {
+  font-size: 20px;
+  margin: 0px auto 20px auto;
+  width: 20%;
+  background-color: var(--primary);
+  color: var(--grey);
+}
+
+.no-results {
+  letter-spacing: 0.1rem;
+  color: var(--primary);
 }
