--- a/ui/exchange-rates/src/app/pages/home/home.component.html
+++ b/ui/exchange-rates/src/app/pages/home/home.component.html
@@ -3,5 +3,5 @@
   (onCurrencyPairSwitchClicked)="handleCurrencyPairSwitch($event)">
 </app-most-traded-exchanges>
 <div class="exchange-rate">
-  <button class="btn" [routerLink]="['','get-your-rate']">Get Your Rate!</button>
+  <button class="btn" [routerLink]="['','get-your-rate']"><em>Get Your Rate!</em></button>
 </div>
