--- a/ui/exchange-rates/src/app/pages/most-traded-exchanges/most-traded-exchanges.component.css
+++ b/ui/exchange-rates/src/app/pages/most-traded-exchanges/most-traded-exchanges.component.css
@@ -1,7 +1,15 @@
+.table-info-header {
+  text-align: center;
+  margin: 15px 0px 0px 0px;
+  color: var(--primary);
+  letter-spacing: 0.1rem;
+  text-decoration: underline;
+}
+
 .card {
   border: 4px solid var(--primary);
   width: 80%;
-  margin: 40px auto 20px auto;
+  margin: 20px auto;
 }
 
 form .form-header-row {
