--- a/ui/exchange-rates/src/app/pages/most-traded-exchanges/most-traded-exchanges.component.html
+++ b/ui/exchange-rates/src/app/pages/most-traded-exchanges/most-traded-exchanges.component.html
@@ -1,3 +1,4 @@
+<h3 class="table-info-header"><em>Top 10 Traded Currency Pairs Worldwide</em></h3>
 <div class="card">
   <div class="card-body">
     <form>
