feat: top-exchange-rates api integration + feature modules setup + added token and error interceptors

--- a/ui/exchange-rates/src/app/pages/home/home.component.html
+++ b/ui/exchange-rates/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<app-loader></app-loader>
 <app-most-traded-exchanges [mostTradedExchanges]="mostTradedCurrencyPairsFiltered"
   (onCountryNameSearched)="handleCountryNameSearch($event)"
   (onCurrencyPairSwitchClicked)="handleCurrencyPairSwitch($event)">
