--- a/ui/exchange-rates/src/app/pages/home/home.component.html
+++ b/ui/exchange-rates/src/app/pages/home/home.component.html
@@ -3,6 +3,8 @@
   (onCountryNameSearched)="handleCountryNameSearch($event)"
   (onCurrencyPairSwitchClicked)="handleCurrencyPairSwitch($event)">
 </app-most-traded-exchanges>
-<div class="exchange-rate">
+
+<div class="footer-banner">
+  <p>* - Exchange Rates shown are for 1 unit of each currency pair.</p>
   <button class="btn" [routerLink]="['','get-your-rate']"><em>Get Your Rate!</em></button>
 </div>
