--- a/ui/exchange-rates/src/app/pages/most-traded-exchanges/most-traded-exchanges.component.html
+++ b/ui/exchange-rates/src/app/pages/most-traded-exchanges/most-traded-exchanges.component.html
@@ -5,7 +5,7 @@
       <div class="form-header-row row col-xs-12">
         <label for="table-search" class="col-xs-3 col-sm-auto col-form-label">By Country:
         </label>
-        <div class="col-xs-3 col-sm-auto">
+        <div class="col-xs-3 col-sm-auto table-search-bar">
           <input type="text" id="table-search" class="form-control" name="country_name" [(ngModel)]="countryFilter">
         </div>
       </div>
