--- a/ui/exchange-rates/src/app/layout/components/header/header.component.css
+++ b/ui/exchange-rates/src/app/layout/components/header/header.component.css
@@ -15,3 +15,14 @@ header .title {
   font-size: 30px;
   color: var(--primary);
 }
+
+/** Media Queries */
+@media screen and (max-width: 500px) {
+  header .title {
+    font-size: 25px;
+  }
+
+  .forex-icon img {
+    width: 40px;
+  }
+}
