--- a/ui/exchange-rates/src/app/pages/most-traded-exchanges/most-traded-exchanges.component.css
+++ b/ui/exchange-rates/src/app/pages/most-traded-exchanges/most-traded-exchanges.component.css
@@ -8,14 +8,19 @@
 
 .card {
   border: 4px solid var(--primary);
-  width: 80%;
+  width: 90%;
   margin: 20px auto;
 }
 
 form .form-header-row {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   margin: 5px 10px 20px 10px;
+}
+
+.table-search-bar {
+  width: 40%;
 }
 
 form .buttons button {
@@ -43,4 +48,62 @@ table th {
 
 .switch-icon img {
   cursor: pointer;
+}
+
+/** Media Queries **/
+@media screen and (max-width: 954px) {
+  .form-header-row {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .table-search-bar {
+    width: 50%;
+  }
+
+  .flag {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 954px) {
+  .flag {
+    display: inline;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .table-info-header em {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .table-info-header em {
+    font-size: 18px;
+  }
+
+  .form-header-row label {
+    text-align: center;
+  }
+
+  .table-search-bar {
+    width: 80%;
+  }
+
+  table th,
+  tbody {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  table th,
+  tbody {
+    font-size: 12px;
+  }
+
+  .switch-icon img {
+    width: 20px;
+  }
 }
