--- a/ui/exchange-rates/src/app/pages/get-your-rate/get-your-rate.component.html
+++ b/ui/exchange-rates/src/app/pages/get-your-rate/get-your-rate.component.html
@@ -11,5 +11,7 @@
       </ul>
     </div>
   </div>
-  <app-exchange-rate-form></app-exchange-rate-form>
+  <app-exchange-rate-form 
+    [countryInfo]="countryInfoFiltered"
+    (selectedCurrencyInfo)="handleCurrencySelection($event)"></app-exchange-rate-form>
 </div>
