--- a/ui/exchange-rates/src/app/pages/most-traded-exchanges/most-traded-exchanges.component.html
+++ b/ui/exchange-rates/src/app/pages/most-traded-exchanges/most-traded-exchanges.component.html
@@ -1,4 +1,7 @@
-<h3 class="table-info-header"><em>Top 10 Traded Currency Pairs Worldwide*</em></h3>
+<div class="header-container d-flex justify-content-center">
+  <h3 class="table-info-header"><em>Top 10 Traded Currency Pairs Worldwide*</em></h3>
+  <button class="btn" (click)="handleRateClick()"><em>Get Your Rate!</em></button>
+</div>
 <div class="card">
   <div class="card-body">
     <form>
