--- a/ui/exchange-rates/src/app/pages/most-traded-exchanges/most-traded-exchanges.component.css
+++ b/ui/exchange-rates/src/app/pages/most-traded-exchanges/most-traded-exchanges.component.css
@@ -1,9 +1,20 @@
+.header-container {
+  margin: 15px auto;
+}
+
+.header-container button {
+  font-size: 22px;
+  width: 15%;
+  background-color: var(--primary);
+  color: var(--grey);
+}
+
 .table-info-header {
   text-align: center;
-  margin: 15px 0px 0px 0px;
   color: var(--primary);
   letter-spacing: 0.1rem;
   text-decoration: underline;
+  width: 75%;
 }
 
 .card {
@@ -24,7 +35,7 @@ form .form-header-row {
 }
 
 form .buttons button {
-  margin: 0px 5px;
+  margin: 0 5px;
 }
 
 thead,
@@ -37,7 +48,7 @@ table th {
 }
 
 .flag {
-  margin: 0px 5px;
+  margin: 0 5px;
   vertical-align: top;
 }
 
@@ -51,6 +62,19 @@ table th {
 }
 
 /** Media Queries **/
+@media screen and (max-width: 1246px){
+
+  .header-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .header-container button {
+    font-size: 20px;
+    width: 30%;
+  }
+}
+
 @media screen and (max-width: 954px) {
   .form-header-row {
     flex-direction: column;
@@ -94,6 +118,11 @@ table th {
   table th,
   tbody {
     font-size: 14px;
+  }
+
+  .header-container button {
+    font-size: 18px;
+    width: 50%;
   }
 }
 
